# ansible-role-docker

./: .ansible-lint  .gitignore  .yamllint  README.md  pyproject.toml  requirements.yml
defaults/: main.yml
handlers/: main.yml
meta/: main.yml
molecule/default/: converge.yml  molecule.yml  prepare.yml  verify.yml
molecule/default/roles/test_docker/defaults/: main.yml
molecule/default/roles/test_docker/tasks/: docker-compose.yml  docker.yml  docker_compose.yml  docker_modules.yml  main.yml
tasks/: main.yml  setup-docker-Debian.yml  setup-docker-compose-Debian.yml
vars/: Debian.yml
